[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/win_scene/WinOverlay.gd" type="Script" id=1]
[ext_resource path="res://Bebas-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/assets/winning_stars_background.png" type="Texture" id=3]
[ext_resource path="res://menu/assets/stars_cover.png" type="Texture" id=4]
[ext_resource path="res://menu/assets/stars_fill.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[node name="WinOverlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -300.5
margin_right = 424.0
margin_bottom = 300.5
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 848.0
margin_bottom = 601.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 848.0
margin_bottom = 96.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MISSION SUCCESS"
align = 1
valign = 3

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 848.0
margin_bottom = 464.0
rect_pivot_offset = Vector2( 0.61, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="InformationText" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 848.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 520.0
margin_right = 848.0
margin_bottom = 598.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 602.0
margin_bottom = 78.0
size_flags_horizontal = 3

[node name="main_menu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 602.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="next_level" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 606.0
margin_right = 848.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 4 )
text = "Next Level"
[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/main_menu" to="." method="_on_main_menu_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer/next_level" to="." method="_on_next_level_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/next_level" to="." method="_on_next_level_pressed"]
